fix minor error

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <section class="showcase" id="showcase">
     <div class="showcase-inner">
       <div class="showcase-inner-image">
-        <img src="img/46577.jpg" alt="Jesus in the park">
+        <img src="dist/img/46577.jpg" alt="Jesus in the park">
         <small><a href="https://www.freepik.com/vectors/tree">Tree vector created by brgfx - www.freepik.com</a></small>
       </div>
       <div class="showcase-inner-text">
