--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
     integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
   <script src="https://unpkg.com/scrollreveal"></script>
-  <link rel="stylesheet" href="dist/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
   <section class="showcase" id="showcase">
     <div class="showcase-inner">
       <div class="showcase-inner-image">
-        <img src="dist/img/46577.jpg" alt="Jesus in the park">
+        <img src="img/46577.jpg" alt="Jesus in the park">
         <small><a href="https://www.freepik.com/vectors/tree">Tree vector created by brgfx - www.freepik.com</a></small>
       </div>
       <div class="showcase-inner-text">
@@ -56,7 +56,7 @@
     </div>
   </section>
 
-  <script src="dist/js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
