--- a/index.html
+++ b/index.html
@@ -20,17 +20,16 @@
 </head>
 
 <body>
-  <a id="top"></a>
   <header id="header">
     <div class="logo">
       <a href="index.html">Main Title</a>
     </div>
     <div class="nav">
       <ul>
-        <li><a href="#top">Home</a></li>
+        <li><a href="#">Home</a></li>
         <li><a href="#">News</a></li>
         <li><a href="#">Videos</a></li>
-        <li><a href="#">Test</a></li>
+        <li><a href="test.html">Test</a></li>
       </ul>
     </div>
     <div class="hamburger">
