--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 </head>
 
 <body>
+  <div id="top"></div>
+  <a href="#top" id="myBtn" title="Go to top"><i class="fas fa-chevron-circle-up fa-2x"></i></a>
   <header id="header">
     <div class="logo">
       <a href="index.html">Main Title</a>
