--- a/video.html
+++ b/video.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vy Pham</title>
+  <title>Vy Pham | Videos</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <link
@@ -28,9 +28,9 @@
     </div>
     <div class="nav">
       <ul>
-        <li><a href="#top">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="news.html">News</a></li>
-        <li><a href="video.html">Videos</a></li>
+        <li><a href="#top">Videos</a></li>
         <li><a href="test.html">Test</a></li>
       </ul>
     </div>
@@ -39,22 +39,19 @@
       <i class="fas fa-times"></i>
     </div>
   </header>
-  <section class="showcase" id="showcase">
-    <div class="showcase-inner">
-      <div class="showcase-inner-image">
-        <img src="img/46577.jpg" alt="Jesus in the park">
-        <small><a href="https://www.freepik.com/vectors/tree">Tree vector created by brgfx - www.freepik.com</a></small>
-      </div>
-      <div class="showcase-inner-text">
-        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi neque harum saepe molestiae aperiam at
-          ullam ducimus doloremque assumenda architecto! Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Exercitationem, debitis!"</p>
-        <p class="italic">
-          Lorem, ipsum dolor.
-        </p>
+  <main class="video-main">
+    <div class="hero">
+      Learn by Watching Videos
+    </div>
+    <div class="video-box">
+      <h1>The Creation</h1>
+      <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/teu7BCZTgDs" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
       </div>
     </div>
-  </section>
+  </main>
 
 
   <script src="js/main.js"></script>
