--- a/test.html
+++ b/test.html
@@ -29,8 +29,8 @@
     <div class="nav">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Videos</a></li>
+        <li><a href="news.html">News</a></li>
+        <li><a href="video.html">Videos</a></li>
         <li><a href="#top">Test</a></li>
       </ul>
     </div>
