--- a/video.html
+++ b/video.html
@@ -43,14 +43,12 @@
     <div class="hero">
       Learn by Watching Videos
     </div>
-    <div class="video-box">
-      <h1>The Creation</h1>
-      <div class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/teu7BCZTgDs" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-      </div>
-    </div>
+
+    <h1>The Creation</h1>
+    <iframe width="400" height="260" src="https://www.youtube.com/embed/teu7BCZTgDs" frameborder="0"
+      allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
   </main>
 
 
