--- a/test.html
+++ b/test.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vy Pham | Test</title>
+  <title>Pre.Communion 2020-21 | Test</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+  <link
+    href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Fredericka+the+Great&family=Great+Vibes&family=Kristi&family=Mali:wght@300;400;500;600&family=Mr+Dafoe&display=swap"
+    rel="stylesheet">
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
@@ -24,7 +26,7 @@
   <a href="#top" id="myBtn" title="Go to top"><i class="fas fa-chevron-circle-up fa-2x"></i></a>
   <header>
     <div class="logo">
-      <a href="index.html">Main Title</a>
+      <a href="index.html">Pre.Communion 2020-21</a>
     </div>
     <div class="nav">
       <ul>
@@ -42,8 +44,8 @@
   <div class="test-content">
     <div class="test-content-inner">
       <div class="test-title">
-        <h1>Test 1</h1>
-        <h2>Date and Time</h2>
+        <h1>Test Chapter 1 - 4</h1>
+        <h2>Sunday, October 18th 2020</h2>
       </div>
       <div class="box box1">
         <div class="question-wrapper">
