--- a/video.html
+++ b/video.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vy Pham | Videos</title>
+  <title>Pre.Communion 2020-21 | Videos</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+  <link
+    href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Fredericka+the+Great&family=Great+Vibes&family=Kristi&family=Mali:wght@300;400;500;600&family=Mr+Dafoe&display=swap"
+    rel="stylesheet">
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
@@ -24,7 +26,7 @@
   <a href="#top" id="myBtn" title="Go to top"><i class="fas fa-chevron-circle-up fa-2x"></i></a>
   <header id="header">
     <div class="logo">
-      <a href="index.html">Main Title</a>
+      <a href="index.html">Pre.Communion 2020-21</a>
     </div>
     <div class="nav">
       <ul>
@@ -43,12 +45,14 @@
     <div class="hero">
       Learn by Watching Videos
     </div>
-
-    <h1>The Creation</h1>
-    <iframe width="400" height="260" src="https://www.youtube.com/embed/teu7BCZTgDs" frameborder="0"
-      allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-
+    <div class="video-wrapper">
+      <h2>The Creation</h2>
+      <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/teu7BCZTgDs" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      </div>
+    </div>
   </main>
 
 
