update test page

--- a/test.html
+++ b/test.html
@@ -136,112 +136,112 @@
           </ol>
         </div>
         <div class="question-wrapper">
-          <h3>10. What's the most important part of God's creation?</h3>
+          <h3>10. _________is a gift from the Holy Spirit that helps us discover more about God.</h3>
           <ol>
-            <li>Water and fire</li>
-            <li>Plants</li>
-            <li>People</li>
-            <li>Animal and fish</li>
+            <li>Curiosity</li>
+            <li>Courage</li>
+            <li>Piety</li>
+            <li>Wonder</li>
           </ol>
         </div>
         <div class="question-wrapper">
           <h3>
-            11. How many God are there?
+            11. _________is God's gift that makes us able to know God and to believe in what he teaches.
           </h3>
           <ol>
-            <li>One</li>
-            <li>Two</li>
-            <li>Three</li>
-            <li>Four</li>
+            <li>Belief</li>
+            <li>Love</li>
+            <li>Humor</li>
+            <li>Faith</li>
           </ol>
         </div>
         <div class="question-wrapper">
-          <h3>12. Who is The HOLY TRINITY?</h3>
+          <h3>12. God is the Father and the______.</h3>
           <ol>
-            <li>God the Father</li>
-            <li>God the Son</li>
-            <li>God the Holy Spirit</li>
-            <li>All the above</li>
+            <li>Son</li>
+            <li>Trinity</li>
+            <li>Creator</li>
+            <li>Redeemer</li>
           </ol>
         </div>
       </div>
       <div class="box box4">
         <div class="question-wrapper">
-          <h3>13. What's the most important part of God's creation?</h3>
+          <h3>13. We first receive the gift of the Holy Spirit at________.</h3>
           <ol>
-            <li>Water and fire</li>
-            <li>Plants</li>
-            <li>People</li>
-            <li>Animal and fish</li>
+            <li>Baptism</li>
+            <li>birth</li>
+            <li>death</li>
+            <li>Mass</li>
           </ol>
         </div>
         <div class="question-wrapper">
-          <h3>14. What's the most important part of God's creation?</h3>
+          <h3>14. The word "Lord" means "_______".</h3>
           <ol>
-            <li>Water and fire</li>
-            <li>Plants</li>
-            <li>People</li>
-            <li>Animal and fish</li>
+            <li>Greatness</li>
+            <li>Creator</li>
+            <li>God</li>
+            <li>Allah</li>
           </ol>
         </div>
         <div class="question-wrapper">
           <h3>
-            15. How many God are there?
+            15. The _____ is the part of each person that lives forever.
           </h3>
           <ol>
-            <li>One</li>
-            <li>Two</li>
-            <li>Three</li>
-            <li>Four</li>
+            <li>mind</li>
+            <li>body</li>
+            <li>heart</li>
+            <li>soul</li>
           </ol>
         </div>
         <div class="question-wrapper">
-          <h3>16. Who is The HOLY TRINITY?</h3>
+          <h3>16. People all around______belong to the Catholic Church.</h3>
           <ol>
-            <li>God the Father</li>
-            <li>God the Son</li>
-            <li>God the Holy Spirit</li>
-            <li>All the above</li>
+            <li>the world</li>
+            <li>our street</li>
+            <li>South America</li>
+            <li>the city</li>
           </ol>
         </div>
       </div>
       <div class="box box5">
         <div class="question-wrapper">
-          <h3>17. What's the most important part of God's creation?</h3>
+          <h3>17. When Catholics all around the world pray______, they show they belong to God's family.</h3>
           <ol>
-            <li>Water and fire</li>
-            <li>Plants</li>
-            <li>People</li>
-            <li>Animal and fish</li>
+            <li>the Psalms</li>
+            <li>the Hail Mary</li>
+            <li>the Rosary</li>
+            <li>the Sign of the Cross</li>
           </ol>
         </div>
         <div class="question-wrapper">
-          <h3>18. What's the most important part of God's creation?</h3>
+          <h3>18. The Church is the__________who believe in Jesus Christ.</h3>
           <ol>
-            <li>Water and fire</li>
-            <li>Plants</li>
-            <li>People</li>
-            <li>Animal and fish</li>
+            <li>team</li>
+            <li>class</li>
+            <li>People of God</li>
+            <li>group</li>
           </ol>
         </div>
         <div class="question-wrapper">
           <h3>
-            19. How many God are there?
+            19. Jesus invites us to have______in God's loving care for us.
           </h3>
           <ol>
-            <li>One</li>
-            <li>Two</li>
-            <li>Three</li>
-            <li>Four</li>
+            <li>hope</li>
+            <li>love</li>
+            <li>faith</li>
+            <li>patience</li>
           </ol>
         </div>
         <div class="question-wrapper">
-          <h3>20. Who is The HOLY TRINITY?</h3>
+          <h3>20. God created all people in his _________. </h3>
           <ol>
-            <li>God the Father</li>
-            <li>God the Son</li>
-            <li>God the Holy Spirit</li>
-            <li>All the above</li>
+            <li>house</li>
+            <li>workshop</li>
+            <li>image</li>
+            <li>office</li>
           </ol>
         </div>
       </div>
