--- a/video.html
+++ b/video.html
@@ -48,7 +48,7 @@
     <div class="video-wrapper">
       <h2>The Creation</h2>
       <div class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/teu7BCZTgDs" frameborder="0"
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/teu7BCZTgDs" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
