--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vy Pham | Test</title>
+  <title>Pre.Communion 2020-21| Test</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <link
@@ -24,7 +24,7 @@
   <a href="#top" id="myBtn" title="Go to top"><i class="fas fa-chevron-circle-up fa-2x"></i></a>
   <header>
     <div class="logo">
-      <a href="index.html">Main Title</a>
+      <a href="index.html">Pre.Communion 2020-21</a>
     </div>
     <div class="nav">
       <ul>
@@ -42,8 +42,8 @@
   <div class="test-content">
     <div class="test-content-inner">
       <div class="test-title">
-        <h1>Test 1</h1>
-        <h2>Date and Time</h2>
+        <h1>Test Chapter 1 - 4</h1>
+        <h2>Sunday, October 18th 2020</h2>
       </div>
       <div class="box box1">
         <div class="question-wrapper">
@@ -243,11 +243,22 @@
           </ol>
         </div>
       </div>
-
+      <div class="box6">
+        <div class="decor">
+          <img src="/img/bonus1.png" alt="">
+        </div>
+        <div>
+          <div class="question-wrapper">
+            <h3>1. What's the name of our Parish?</h3>
+          </div>
+          <div class="question-wrapper">
+            <h3>2. What's the name of our Priest?</h3>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <script src="js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
