--- a/video.html
+++ b/video.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vy Pham | Videos</title>
+  <title>Pre.Communion 2020-21 | Videos</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <link
@@ -24,7 +24,7 @@
   <a href="#top" id="myBtn" title="Go to top"><i class="fas fa-chevron-circle-up fa-2x"></i></a>
   <header id="header">
     <div class="logo">
-      <a href="index.html">Main Title</a>
+      <a href="index.html">Pre.Communion 2020-21</a>
     </div>
     <div class="nav">
       <ul>
