update bonus question

--- a/index.html
+++ b/index.html
@@ -48,11 +48,10 @@
         <small><a href="https://www.freepik.com/vectors/tree">Tree vector created by brgfx - www.freepik.com</a></small>
       </div>
       <div class="showcase-inner-text">
-        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi neque harum saepe molestiae aperiam at
-          ullam ducimus doloremque assumenda architecto! Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Exercitationem, debitis!"</p>
+        <p class="text-md">"Love God with all your heart.<br>
+          Love other people as much as you love yourself."</p>
         <p class="italic">
-          Lorem, ipsum dolor.
+          Based on Matthew 22:37 , 39
         </p>
       </div>
     </div>
