--- a/test.html
+++ b/test.html
@@ -246,15 +246,18 @@
         </div>
       </div>
       <div class="box6">
-        <div class="decor">
-          <img src="/img/bonus1.png" alt="">
-        </div>
+        <h2>Earn extra 5+ points for each bonus question</h2>
         <div>
-          <div class="question-wrapper">
-            <h3>1. What's the name of our Parish?</h3>
+          <div class="decor">
+            <img src="/img/5plus.png" alt="">
           </div>
-          <div class="question-wrapper">
-            <h3>2. What's the name of our Priest?</h3>
+          <div>
+            <div class="question-wrapper">
+              <h3>1. What's the name of our Parish? <span>+5</span></h3>
+            </div>
+            <div class="question-wrapper">
+              <h3>2. What's the name of our Priest? <span>+5</span></h3>
+            </div>
           </div>
         </div>
       </div>
