--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <body>
   <div id="top"></div>
   <a href="#top" id="myBtn" title="Go to top"><i class="fas fa-chevron-circle-up fa-2x"></i></a>
+  <div class="buffer"></div>
   <header id="header">
     <div class="logo">
       <a href="index.html">Pre.Communion 2020-21</a>
