--- a/video.html
+++ b/video.html
@@ -24,7 +24,8 @@
 <body>
   <div id="top"></div>
   <a href="#top" id="myBtn" title="Go to top"><i class="fas fa-chevron-circle-up fa-2x"></i></a>
-  <div class="buffer"></div>
+  <!-- <div class="buffer"></div> -->
+
   <header id="header">
     <div class="logo">
       <a href="index.html">Pre.Communion 2020-21</a>
@@ -44,7 +45,9 @@
   </header>
   <main class="video-main">
     <div class="hero">
-      Learn by Watching Videos
+      <h3>
+        Learn by Watching Videos
+      </h3>
     </div>
     <div class="video-wrapper">
       <h2>The Creation</h2>
