add second video

--- a/video.html
+++ b/video.html
@@ -57,6 +57,14 @@
           allowfullscreen></iframe>
       </div>
     </div>
+    <div class="video-wrapper">
+      <h2>Jesus - The Son of God</h2>
+      <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/8u-ICIHAmKk" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      </div>
+    </div>
   </main>
   <script src="js/main.js"></script>
 </body>
