change news page to objectives page

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <div class="nav">
       <ul>
         <li><a href="#top">Home</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="video.html">Videos</a></li>
-        <li><a href="test.html">Test</a></li>
+        <li><a href="objects.html">Objectives</a></li>
+        <li><a href="videos.html">Videos</a></li>
+        <li><a href="tests.html">Test</a></li>
       </ul>
     </div>
     <div class="hamburger">
