--- a/tests.html
+++ b/tests.html
@@ -32,9 +32,9 @@
     <div class="nav">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="video.html">Videos</a></li>
-        <li><a href="#top">Test</a></li>
+        <li><a href="objects.html">Objectives</a></li>
+        <li><a href="videos.html">Videos</a></li>
+        <li><a href="#top">Tests</a></li>
       </ul>
     </div>
     <div class="hamburger">
