--- a/videos.html
+++ b/videos.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pre.Communion 2020-21 | News</title>
+  <title>Pre.Communion 2020-21 | Videos</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link
     href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Fredericka+the+Great&family=Great+Vibes&family=Kristi&family=Mali:wght@300;400;500;600&family=Mr+Dafoe&display=swap"
@@ -24,7 +24,8 @@
 <body>
   <div id="top"></div>
   <a href="#top" id="myBtn" title="Go to top"><i class="fas fa-chevron-circle-up fa-2x"></i></a>
-  <div class="buffer"></div>
+  <!-- <div class="buffer"></div> -->
+
   <header id="header">
     <div class="logo">
       <a href="index.html">Pre.Communion 2020-21</a>
@@ -32,9 +33,9 @@
     <div class="nav">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#top">News</a></li>
-        <li><a href="video.html">Videos</a></li>
-        <li><a href="test.html">Test</a></li>
+        <li><a href="objects.html">Objectives</a></li>
+        <li><a href="#top">Videos</a></li>
+        <li><a href="tests.html">Tests</a></li>
       </ul>
     </div>
     <div class="hamburger">
@@ -42,9 +43,29 @@
       <i class="fas fa-times"></i>
     </div>
   </header>
-
-
-
+  <main class="video-main">
+    <div class="hero">
+      <h3>
+        Learn by Watching Videos
+      </h3>
+    </div>
+    <div class="video-wrapper">
+      <h2>The Creation</h2>
+      <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/teu7BCZTgDs" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="video-wrapper">
+      <h2>Jesus - The Son of God</h2>
+      <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/8u-ICIHAmKk" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      </div>
+    </div>
+  </main>
   <script src="js/main.js"></script>
 </body>
 
