--- a/videos.html
+++ b/videos.html
@@ -49,6 +49,7 @@
         Learn by Watching Videos
       </h3>
     </div>
+    <!-- Copy section below to add more video -->
     <div class="video-wrapper">
       <h2>The Creation</h2>
       <div class="video">
@@ -57,6 +58,7 @@
           allowfullscreen></iframe>
       </div>
     </div>
+    <!-- End of section -->
     <div class="video-wrapper">
       <h2>Jesus - The Son of God</h2>
       <div class="video">
@@ -65,6 +67,17 @@
           allowfullscreen></iframe>
       </div>
     </div>
+    <!-- End video -->
+
+    <div class="video-wrapper">
+      <h2>God Gives Us The Holy Spirit</h2>
+      <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0kWV5-JQ9Yg" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      </div>
+    </div>
+    <!-- End video -->
   </main>
   <script src="js/main.js"></script>
 </body>
