--- a/videos.html
+++ b/videos.html
@@ -25,6 +25,23 @@
   <div id="top"></div>
   <a href="#top" id="myBtn" title="Go to top"><i class="fas fa-chevron-circle-up fa-2x"></i></a>
   <!-- <div class="buffer"></div> -->
+  <div class="menu">
+    <div class="btn-toggler">
+      List
+    </div>
+    <ul class="menu-list">
+      <li class="menu-list-item">
+        <a href="#creation" class="list-link">The Creation</a>
+      </li>
+      <li class="menu-list-item">
+        <a href="#sonOfGod" class="list-link">Jesus - The Son Of God</a>
+      </li>
+      <li class="menu-list-item">
+        <a href="#giveus" class="list-link">God Give Us The Holy Spirit</a>
+      </li>
+    </ul>
+  </div>
+
 
   <header id="header">
     <div class="logo">
@@ -50,7 +67,7 @@
       </h3>
     </div>
     <!-- Copy section below to add more video -->
-    <div class="video-wrapper">
+    <div class="video-wrapper" id="creation">
       <h2>The Creation</h2>
       <div class="video">
         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/teu7BCZTgDs" frameborder="0"
@@ -59,7 +76,7 @@
       </div>
     </div>
     <!-- End of section -->
-    <div class="video-wrapper">
+    <div class="video-wrapper" id="sonOfGod">
       <h2>Jesus - The Son of God</h2>
       <div class="video">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/8u-ICIHAmKk" frameborder="0"
@@ -69,7 +86,7 @@
     </div>
     <!-- End video -->
 
-    <div class="video-wrapper">
+    <div class="video-wrapper" id="giveus">
       <h2>God Gives Us The Holy Spirit</h2>
       <div class="video">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/0kWV5-JQ9Yg" frameborder="0"
