--- a/tests.html
+++ b/tests.html
@@ -250,7 +250,7 @@
         <h2>Earn extra 5+ points for each bonus question</h2>
         <div>
           <div class="decor">
-            <img src="/img/5plus.png" alt="">
+            <img src="img/5plus.png" alt="">
           </div>
           <div>
             <div class="question-wrapper">
