add changes to tests page
add menu for tests page, create tests folder, edit links...

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li><a href="#top">Home</a></li>
         <li><a href="objects.html">Objectives</a></li>
         <li><a href="videos.html">Videos</a></li>
-        <li><a href="tests.html">Test</a></li>
+        <li><a href="tests/test-1-4.html">Tests</a></li>
       </ul>
     </div>
     <div class="hamburger">
