--- a/objects.html
+++ b/objects.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pre.Communion 2020-21 | News</title>
+  <title>Pre.Communion 2020-21 | Objectives</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link
     href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Fredericka+the+Great&family=Great+Vibes&family=Kristi&family=Mali:wght@300;400;500;600&family=Mr+Dafoe&display=swap"
@@ -34,7 +34,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="#top">Objectives</a></li>
         <li><a href="videos.html">Videos</a></li>
-        <li><a href="tests.html">Tests</a></li>
+        <li><a href="tests/test-1-4.html">Tests</a></li>
       </ul>
     </div>
     <div class="hamburger">
