--- a/videos.html
+++ b/videos.html
@@ -52,7 +52,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="objects.html">Objectives</a></li>
         <li><a href="#top">Videos</a></li>
-        <li><a href="tests.html">Tests</a></li>
+        <li><a href="tests/test-1-4.html">Tests</a></li>
       </ul>
     </div>
     <div class="hamburger">
