--- a/tests/test-1-4.html
+++ b/tests/test-1-4.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pre.Communion 2020-21 | Test</title>
+  <title>Test Chapter 1 - 4</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link
     href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Fredericka+the+Great&family=Great+Vibes&family=Kristi&family=Mali:wght@300;400;500;600&family=Mr+Dafoe&display=swap"
@@ -18,22 +18,43 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
     integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
   <script src="https://unpkg.com/scrollreveal"></script>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
   <div id="top"></div>
   <a href="#top" id="myBtn" title="Go to top"><i class="fas fa-chevron-circle-up fa-2x"></i></a>
   <div class="buffer"></div>
+
+
+
   <header>
+    <!--Menu  -->
+    <div class="test-menu-toggler">
+      Menu
+    </div>
+    <div class="test-menu">
+      <ul class="test-menu-list">
+        <li class="test-menu-list-item">
+          <a href="test-1-4.html" class="test-menu-list-link">Test Chapter 1 - 4</a>
+        </li>
+        <li class="test-menu-list-item">
+          <a href="#" class="test-menu-list-link">Test Chapter 1 - 4</a>
+        </li>
+        <li class="test-menu-list-item">
+          <a href="#" class="test-menu-list-link">Test Chapter 1 - 4</a>
+        </li>
+      </ul>
+    </div>
+    <!--End Menu  -->
     <div class="logo">
-      <a href="index.html">Pre.Communion 2020-21</a>
+      <a href="/index.html">Pre.Communion 2020-21</a>
     </div>
     <div class="nav">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="objects.html">Objectives</a></li>
-        <li><a href="videos.html">Videos</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/objects.html">Objectives</a></li>
+        <li><a href="/videos.html">Videos</a></li>
         <li><a href="#top">Tests</a></li>
       </ul>
     </div>
@@ -250,7 +271,7 @@
         <h2>Earn extra 5+ points for each bonus question</h2>
         <div>
           <div class="decor">
-            <img src="img/5plus.png" alt="">
+            <img src="/img/5plus.png" alt="">
           </div>
           <div>
             <div class="question-wrapper">
@@ -264,7 +285,7 @@
       </div>
     </div>
 
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
