--- a/tests/test-1-4.html
+++ b/tests/test-1-4.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
     integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
   <script src="https://unpkg.com/scrollreveal"></script>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -48,13 +48,13 @@
     </div>
     <!--End Menu  -->
     <div class="logo">
-      <a href="/index.html">Pre.Communion 2020-21</a>
+      <a href="../index.html">Pre.Communion 2020-21</a>
     </div>
     <div class="nav">
       <ul>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/objects.html">Objectives</a></li>
-        <li><a href="/videos.html">Videos</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../objects.html">Objectives</a></li>
+        <li><a href="../videos.html">Videos</a></li>
         <li><a href="#top">Tests</a></li>
       </ul>
     </div>
@@ -271,7 +271,7 @@
         <h2>Earn extra 5+ points for each bonus question</h2>
         <div>
           <div class="decor">
-            <img src="/img/5plus.png" alt="">
+            <img src="../img/5plus.png" alt="">
           </div>
           <div>
             <div class="question-wrapper">
@@ -285,7 +285,7 @@
       </div>
     </div>
 
-    <script src="/js/main.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
