update tests menu

--- a/tests/test-1-4.html
+++ b/tests/test-1-4.html
@@ -39,10 +39,10 @@
           <a href="test-1-4.html" class="test-menu-list-link">Test Chapter 1 - 4</a>
         </li>
         <li class="test-menu-list-item">
-          <a href="#" class="test-menu-list-link">Test Chapter 1 - 4</a>
+          <a href="#" class="test-menu-list-link">Coming Soon...</a>
         </li>
         <li class="test-menu-list-item">
-          <a href="#" class="test-menu-list-link">Test Chapter 1 - 4</a>
+          <a href="#" class="test-menu-list-link">Coming Soon...</a>
         </li>
       </ul>
     </div>
