--- a/tests/test-1-4.html
+++ b/tests/test-1-4.html
@@ -26,8 +26,6 @@
   <a href="#top" id="myBtn" title="Go to top"><i class="fas fa-chevron-circle-up fa-2x"></i></a>
   <div class="buffer"></div>
 
-
-
   <header>
     <!--Menu  -->
     <div class="test-menu-toggler">
@@ -63,6 +61,8 @@
       <i class="fas fa-times"></i>
     </div>
   </header>
+
+  <!-- Test Content -->
   <div class="test-content">
     <div class="test-content-inner">
       <div class="test-title">
@@ -267,6 +267,8 @@
           </ol>
         </div>
       </div>
+
+      <!-- Bonus Questions -->
       <div class="box6">
         <h2>Earn extra 5+ points for each bonus question</h2>
         <div>
@@ -284,7 +286,7 @@
         </div>
       </div>
     </div>
-
+    <!-- JS -->
     <script src="../js/main.js"></script>
 </body>
 
