--- a/videos.html
+++ b/videos.html
@@ -25,6 +25,8 @@
   <div id="top"></div>
   <a href="#top" id="myBtn" title="Go to top"><i class="fas fa-chevron-circle-up fa-2x"></i></a>
   <!-- <div class="buffer"></div> -->
+
+  <!-- Menu List -->
   <div class="menu">
     <div class="btn-toggler">
       List
@@ -42,7 +44,7 @@
     </ul>
   </div>
 
-
+  <!-- Header -->
   <header id="header">
     <div class="logo">
       <a href="index.html">Pre.Communion 2020-21</a>
@@ -60,12 +62,15 @@
       <i class="fas fa-times"></i>
     </div>
   </header>
+
+  <!-- Main -->
   <main class="video-main">
     <div class="hero">
       <h3>
         Learn by Watching Videos
       </h3>
     </div>
+
     <!-- Copy section below to add more video -->
     <div class="video-wrapper" id="creation">
       <h2>The Creation</h2>
@@ -76,6 +81,7 @@
       </div>
     </div>
     <!-- End of section -->
+
     <div class="video-wrapper" id="sonOfGod">
       <h2>Jesus - The Son of God</h2>
       <div class="video">
@@ -96,6 +102,8 @@
     </div>
     <!-- End video -->
   </main>
+
+  <!-- JS -->
   <script src="js/main.js"></script>
 </body>
 
