--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <div id="top"></div>
   <a href="#top" id="myBtn" title="Go to top"><i class="fas fa-chevron-circle-up fa-2x"></i></a>
   <div class="buffer"></div>
+
+  <!-- Header -->
   <header id="header">
     <div class="logo">
       <a href="index.html">Pre.Communion 2020-21</a>
@@ -42,6 +44,8 @@
       <i class="fas fa-times"></i>
     </div>
   </header>
+
+  <!-- Showcase -->
   <section class="showcase" id="showcase">
     <div class="showcase-inner">
       <div class="showcase-inner-image">
@@ -58,7 +62,7 @@
     </div>
   </section>
 
-
+  <!-- JS -->
   <script src="js/main.js"></script>
 </body>
 
