--- a/objects.html
+++ b/objects.html
@@ -25,6 +25,8 @@
   <div id="top"></div>
   <a href="#top" id="myBtn" title="Go to top"><i class="fas fa-chevron-circle-up fa-2x"></i></a>
   <div class="buffer"></div>
+
+  <!-- Header -->
   <header id="header">
     <div class="logo">
       <a href="index.html">Pre.Communion 2020-21</a>
